--- a/test.html
+++ b/test.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>i am a web site</title>
   </head>
-  <body></body>
+  <body>
+    <div>hello</div>
+  </body>
 </html>
